Fix mac raciness with initial needs begin frame state

Because Mac doesn't delay begin frame messages (because it needs to
receive them during resize), this creates some startup raciness.
Fix this by just having the renderer host side assume that the
renderer is going to want begin frames (even before hearing about it),
so that if the SetNeedsBeginFrames(true) message is dropped it
won't matter.

Renderers when they start up send a SetNeedsBeginFrames(true) and
then a SetNeedsBeginFrames(false) once they've finished loading and
at that point the renderer and the host will be back in agreement
about the state.

BUG=657878

Review-Url: https://codereview.chromium.org/2451953004
Cr-Commit-Position: refs/heads/master@{#427844}

Former-commit-id: 2051d912c9c52c61045908314d288a3ecca6c6c2